--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#show</h1>
-<p>Find me in app/views/pages/show.html.erb</p>
+<h1>Page of <%= @page.title %></h1>
+<h2>Author: <%= @page.author %><.h2>
+<p><%= @page.body %></p>
